kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-sample
  labels:
    name: eks-sample
