kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-web-server
  namespace: eks-sample
  labels:
    app: sample-web-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-web-server
  template:
    metadata:
      labels:
        app: sample-web-server
    spec:
      serviceAccountName: sample-service-account
      containers:
        - name: sample-web-server
          image: 803033771544.dkr.ecr.eu-west-1.amazonaws.com/sample-web-server:latest
          ports:
            - name: web-server-port
              containerPort: 80
              protocol: TCP
