kubernetes/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-aws-access
  namespace: eks-sample
spec:
  serviceAccountName: sample-service-account
  containers:
  - name: main
    image: demisto/boto3py3:1.0.0.81279
    command: ["sleep", "infinity"]
