kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service
  namespace: eks-sample
  labels:
    app: sample-service
spec:
  type: ClusterIP
  selector:
    app: sample-web-server
  ports:
    - name: service-port
      port: 80
      targetPort: web-server-port
      protocol: TCP
